changed to java 1.8